--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -775,6 +775,14 @@ footer {
   color: #FF116E;
 }
 
+.field-danger {
+  border-color: #FF116E;
+}
+
+.text-danger {
+  color: #FF116E;
+}
+
 .input-middle {
   padding-top: 14px;
   padding-bottom: 14px;
