--- a/frontend/web/css/style.css
+++ b/frontend/web/css/style.css
@@ -783,6 +783,14 @@ footer {
   color: #FF116E;
 }
 
+.has-error .help-block {
+  color: #FF116E;
+}
+
+.has-error input {
+  border-color: #FF116E;
+}
+
 .input-middle {
   padding-top: 14px;
   padding-bottom: 14px;
